2005-05-24  Vincent Noel  <vnoel@cox.net>

	* logview-findbar.c: (logview_findbar_clicked_cb),
	(logview_findbar_hide), (logview_findbar_new):
	* logview-findbar.h:
	* logview.c: (CreateMainWin):
	* logview.h: Make the find toolbar same as the one in evince. No
	more "close" button, just hide it on focus-out.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_select_log), (loglist_create),
	(toggle_monitor):
	* logview.h:
	* monitor.c: (monitor_start), (mon_update_display),
	(mon_check_logs): Changed some things in the monitoring. Does not
	work just yet. Applied patch from Sylvain Pasche in bug #170244 to
	prevent a crash.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_save_prefs), (logview_select_log),
	(CreateMainWin), (logview_collapse_rows), (logview_set_fontsize),
	(logview_bigger_text), (logview_smaller_text),
	(logview_normal_text):
	* logview.h:
	* userprefs.c: (prefs_load), (prefs_save):
	* userprefs.h: A little better.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_select_log), (CreateMainWin),
	(logview_collapse_rows), (logview_set_fontsize),
	(logview_bigger_text), (logview_smaller_text),
	(logview_normal_text):
	* logview.h: Add the ability to change the fontsize for
	log viewing.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (calendar_day_selected),
	(calendar_day_selected_double_click):
	* logview.c: (loglist_create), (CreateMainWin), (toggle_monitor):
	Better way to show/hide the monitor area.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (init_calendar_data), (calendar_month_changed),
	(calendar_day_selected):
	* logview.c: (loglist_selection_changed): Make the calendar
	behave when no log is selected.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* Makefile.am:
	* log_repaint.c: (handle_row_activation_cb), (log_repaint):
	* logview.c: (logview_create_window), (CloseLogMenu),
	(toggle_calendar), (logview_menus_set_state):