@@ -1,5 +1,12 @@
 2005-05-24  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c: (log_repaint):
+	* logview.c: (logview_save_prefs), (logview_select_log),
+	(loglist_selection_changed), (loglist_find_logname):
+	* userprefs.c: (prefs_save): Prevent a crash.
+
+2005-05-24  Vincent Noel  <vnoel@cox.net>
+
 	* logview-findbar.c: (logview_findbar_clicked_cb),
 	(logview_findbar_hide), (logview_findbar_new):
 	* logview-findbar.h:
